Bug 47577 - Zoom slider should only react to full click, not just to onmouseup event
Summary: Zoom slider should only react to full click, not just to onmouseup event
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: high normal
Assignee: Rodolfo
URL:
Whiteboard: Confirmed:4.2.0.1:Ubuntu target:4.5.0...
Keywords:
: 54422 56271 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-20 05:54 UTC by Thomas Bertels
Modified: 2015-02-09 15:15 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Bertels 2012-03-20 05:54:00 UTC
The zoom slider currently seems to listen to the onmouseup event.

So, when using the scrollbar and releasing the mouse button while having the mouse pointer on the zoom slider, the zoom gets changed.

The zoom slider should only listen to full click event (onmousedown + onmouseup).
Comment 1 sasha.libreoffice 2012-06-14 00:08:59 UTC
Thanks for bugreport
reproduced in 3.3.4 and 3.5.4 on Fedora 64 bit (Windows not tested)
Steps to reproduce:
0. Click on page scroll slider thumb and hold mouse
1. Move mouse on line between zoom slider thumb and and icon + or -
2. Release mouse button

IMHO: this behaviour is part of LO internals inherited from Borland VCL. And not easy to fix at this time.
Comment 2 Ivan Timofeev (retired) 2012-10-22 17:20:58 UTC
*** Bug 56271 has been marked as a duplicate of this bug. ***
Comment 3 Gabriel Dorante 2013-01-24 04:34:20 UTC
Thanks sasha.libreoffice@gmail.com for your answer.

what a shame that this bug must be not easy to fix, but is there any way to deactivate zoom slider or prevent zoom widget to show up? (like in pre 3.x versions of openoffice.org), maybe it would be a temporal solution to my specific problem, it is very annoying to use horizontal displacement bar and zoom slider go crazy
Comment 4 Robinson Tryon (qubit) 2013-12-22 16:43:19 UTC
Still around on 4.2 RC1. It'd be nice to deal with this one soon.
Comment 5 Jorendc 2014-02-06 20:38:25 UTC
*** Bug 54422 has been marked as a duplicate of this bug. ***
Comment 6 gekacheka 2014-02-15 17:27:28 UTC
A workaround: use middle mouse button to drag the horizontal scroll bar.
(unfortunately, most laptops do not have a middle pointer button.)
Comment 7 Michael Stahl 2015-02-06 23:11:27 UTC
(In reply to sasha.libreoffice from comment #1)
> IMHO: this behaviour is part of LO internals inherited from Borland VCL.

please note that StarOffice VCL is completely unrelated to Borland VCL.
Comment 8 Commit Notification 2015-02-09 14:59:44 UTC
Rodolfo Ribeiro Gomes committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=53740bd71a0ae569da36b9293ef22842a0b53f1e

tdf#47577  Zoom slider should only react to full click

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Stahl 2015-02-09 15:01:55 UTC
Rodolfo fixed it, yay
Comment 10 Commit Notification 2015-02-09 15:15:22 UTC
Rodolfo Ribeiro Gomes committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0bc37cf20044fe8fee0cc7dd5af3ee58304a3a0f&h=libreoffice-4-4

tdf#47577  Zoom slider should only react to full click

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.