fdo#47577  Zoom slider should only react to full click

Change-Id: If859754c956a634a96066ac407b70d6dd2759d53
Signed-off-by: Rodolfo Ribeiro Gomes <libo@rodolfo.eng.br>